--- a/makefile.libretro
+++ b/makefile.libretro
@@ -21,7 +21,7 @@ EMULATOR = $(TARGET)$(EXE)
 DEFS = -DGP2X -DLSB_FIRST -DALIGN_INTS -DALIGN_SHORTS -DINLINE="static __inline" -Dasm="__asm__ __volatile__" -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -DLIBRETRO
 
 CFLAGS += -O3 -ffast-math -Isrc -Isrc/$(MAMEOS) -Isrc/zlib -fPIC \
--Wno-sign-compare -Wunused -Wpointer-arith -Wcast-align -Waggregate-return -Wshadow -Wno-write-strings \
+-Wno-sign-compare -Wunused -Wpointer-arith -Waggregate-return -Wshadow -Wno-write-strings \
 -Wno-unused-but-set-variable
 
 LDFLAGS += -shared -s -Wl,--version-script=src/libretro/libretro.T
@@ -47,7 +47,7 @@ CDEFS = $(DEFS) $(COREDEFS) $(CPUDEFS) $(SOUNDDEFS)
 
 $(EMULATOR): $(COREOBJS) $(OSOBJS) $(DRVOBJS)
 	@echo Linking $@...
-	@$(CXX) $(LDFLAGS) $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS) -o $@
+	@$(CC) $(LDFLAGS) $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS) -o $@
 
 $(OBJ)/%.o: src/%.c
 	@echo Compiling $<...
@@ -55,11 +55,11 @@ $(OBJ)/%.o: src/%.c
 
 $(OBJ)/%.o: src/%.s
 	@echo Compiling $<...
-	@$(CXX) $(CDEFS) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CDEFS) $(CFLAGS) -c $< -o $@
 
 $(OBJ)/%.o: src/%.S
 	@echo Compiling $<...
-	@$(CXX) $(CDEFS) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CDEFS) $(CFLAGS) -c $< -o $@
 
 $(sort $(OBJDIRS)):
 	$(MD) $@
