--- a/makefile.libretro
+++ b/makefile.libretro
@@ -1,13 +1,88 @@
+DEBUG=0
+#set later according to platform
+IS_X86 = 0
 TARGET = mame
+# extension for executables
+EXE = .so
+
+ifeq ($(platform),)
+platform = unix
+ifeq ($(shell uname -a),)
+   platform = win
+else ifneq ($(findstring MINGW,$(shell uname -a)),)
+   platform = win
+else ifneq ($(findstring Darwin,$(shell uname -a)),)
+   platform = osx
+else ifneq ($(findstring win,$(shell uname -a)),)
+   platform = win
+endif
+endif
+
+ifeq ($(platform), unix)
+   EXE = .so
+   TARGET := libretro
+   fpic := -fPIC
+   SHARED := -shared -Wl,--version-script=src/libretro/link.T -Wl,-no-undefined
+   ENDIANNESS_DEFINES := -DLSB_FIRST
+   IS_X86 = 1
+else ifeq ($(platform), osx)
+   EXE = .dylib
+   TARGET := libretro
+   fpic := -fPIC
+   SHARED := -dynamiclib
+   ENDIANNESS_DEFINES := -DLSB_FIRST
+   IS_X86 = 1
+else ifeq ($(platform), ps3)
+   EXE = .a
+   TARGET := libretro
+   CC = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-gcc.exe
+   AR = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-ar.exe
+   ENDIANNESS_DEFINES :=
+   PLATFORM_DEFINES := -D__CELLOS_LV2__ -D__POWERPC__ -D__ppc__
+else ifeq ($(platform), sncps3)
+   EXE = .a
+   TARGET := libretro
+   CC = $(CELL_SDK)/host-win32/sn/bin/ps3ppusnc.exe
+   AR = $(CELL_SDK)/host-win32/sn/bin/ps3snarl.exe
+   CFLAGS += -DWORDS_BIGENDIAN=1
+   PLATFORM_DEFINES := -D__CELLOS_LV2__ -D__POWERPC__ -D__ppc__
+else ifeq ($(platform), xenon)
+   EXE = .a
+   TARGET := libretro
+   CC = xenon-gcc
+   AR = xenon-ar
+   CFLAGS += -D__LIBXENON__ -m32 -D__ppc__
+   PLATFORM_DEFINES := -D__LIBXENON__ -D__POWERPC__ -D__ppc_
+else ifeq ($(platform), wii)
+   EXE = .a
+   TARGET := libretro
+   CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc
+   AR = $(DEVKITPPC)/bin/powerpc-eabi-ar
+   PLATFORM_DEFINES += -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float
+else
+   EXE = .dll
+   TARGET := retro
+   CC = gcc
+   SHARED := -shared -static-libgcc -static-libstdc++ -s -Wl,--version-script=src/libretro/link.T
+   CFLAGS += -D__WIN32__ -D__WIN32_LIBRETRO__ -Wno-missing-field-initializers
+   IS_X86 = 1
+endif
+
+ifeq ($(IS_X86), 1)
+X86_DEFINES = 
+CFLAGS +=  $(X86_DEFINES)
+endif
+
+ifeq ($(DEBUG), 1)
+CFLAGS += -O0 -g
+else
+CFLAGS += -O3
+endif
 
 # set this the operating system you're building for
 # (actually you'll probably need your own main makefile anyways)
 # MAMEOS = msdos
 MAMEOS = libretro
-
-# extension for executables
-# EXE = .exe
-EXE = .so
 
 # CPU core include paths
 VPATH=src $(wildcard src/cpu/*)
@@ -18,13 +93,11 @@ RM = @rm -f
 
 EMULATOR = $(TARGET)$(EXE)
 
-DEFS = -DGP2X -DLSB_FIRST -DALIGN_INTS -DALIGN_SHORTS -DINLINE="static __inline" -Dasm="__asm__ __volatile__" -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -DLIBRETRO
+DEFS = -DGP2X -DALIGN_INTS -DALIGN_SHORTS -DINLINE="static __inline" -Dasm="__asm__ __volatile__" -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -DLIBRETRO $(ENDIANNESS_DEFINES)
 
-CFLAGS += -O3 -ffast-math -Isrc -Isrc/$(MAMEOS) -Isrc/zlib -fPIC \
+CFLAGS += -ffast-math $(fpic) -Isrc -Isrc/$(MAMEOS) -Isrc/zlib \
 -Wno-sign-compare -Wunused -Wpointer-arith -Waggregate-return -Wshadow -Wno-write-strings \
 -Wno-unused-but-set-variable
-
-LDFLAGS += -shared -s -Wl,--version-script=src/libretro/libretro.T
 
 LIBS = -lm -lpthread
 
@@ -37,7 +110,7 @@ all:	maketree $(EMULATOR)
 
 # include the various .mak files
 include src/core.mak
-include src/$(TARGET).mak
+include src/mame.mak
 include src/rules.mak
 include src/sound.mak
 include src/$(MAMEOS)/$(MAMEOS).mak
@@ -46,8 +119,20 @@ include src/$(MAMEOS)/$(MAMEOS).mak
 CDEFS = $(DEFS) $(COREDEFS) $(CPUDEFS) $(SOUNDDEFS)
 
 $(EMULATOR): $(COREOBJS) $(OSOBJS) $(DRVOBJS)
+ifeq ($(platform), ps3)
+	$(AR) rcs $@ $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS)
+else ifeq ($(platform), sncps3)
+	$(AR) rcs $@ $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS)
+
+else ifeq ($(platform), xenon)
+	$(AR) rcs $@ $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS)
+
+else ifeq ($(platform), wii)
+	$(AR) rcs $@ $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS)
+else
 	@echo Linking $@...
-	@$(CC) $(LDFLAGS) $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS) -o $@
+	@$(CC) $(SHARED) $(LDFLAGS) $(COREOBJS) $(OSOBJS) $(LIBS) $(DRVOBJS) -o $@
+endif
 
 $(OBJ)/%.o: src/%.c
 	@echo Compiling $<...
