--- a/makefile.libretro
+++ b/makefile.libretro
@@ -5,6 +5,8 @@ TARGET = mame
 # extension for executables
 EXE = .so
 
+GCC_DEFINES := -Wno-sign-compare -Wunused -Wpointer-arith -Waggregate-return -Wshadow
+
 ifeq ($(platform),)
 platform = unix
 ifeq ($(shell uname -a),)
@@ -46,6 +48,7 @@ else ifeq ($(platform), sncps3)
    CC = $(CELL_SDK)/host-win32/sn/bin/ps3ppusnc.exe
    AR = $(CELL_SDK)/host-win32/sn/bin/ps3snarl.exe
    CFLAGS += -DWORDS_BIGENDIAN=1
+   GCC_DEFINES := 
    PLATFORM_DEFINES := -D__CELLOS_LV2__ -D__ppc__
    HAVE_RZLIB := 1
 else ifeq ($(platform), xenon)
@@ -107,8 +110,8 @@ ifeq ($(HAVE_RZLIB),)
 ZLIB_INCLUDE := -Isrc/zlib
 endif
 
-CFLAGS += -ffast-math $(fpic) $(PLATFORM_DEFINES) -Isrc -Isrc/$(MAMEOS) $(ZLIB_INCLUDE) \
--Wno-sign-compare -Wunused -Wpointer-arith -Waggregate-return -Wshadow
+
+CFLAGS += -ffast-math $(fpic) $(PLATFORM_DEFINES) -Isrc -Isrc/$(MAMEOS) $(ZLIB_INCLUDE) $(GCC_DEFINES)
 
 OBJDIRS = $(OBJ) $(OBJ)/cpu $(OBJ)/sound $(OBJ)/$(MAMEOS) \
 	$(OBJ)/drivers $(OBJ)/machine $(OBJ)/vidhrdw $(OBJ)/sndhrdw $(OBJ)/zlib
@@ -135,7 +138,7 @@ $(EMULATOR): $(OBJECTS_COMBINED)
 ifeq ($(platform), ps3)
 	$(AR) rcs $@ $(OBJECTS_COMBINED)
 else ifeq ($(platform), sncps3)
-	$(AR) rcs $@ $(OBJECTS_COMBINED
+	$(AR) rcs $@ $(OBJECTS_COMBINED)
 else ifeq ($(platform), xenon)
 	$(AR) rcs $@ $(OBJECTS_COMBINED)
 else ifeq ($(platform), wii)
