--- a/makefile.libretro
+++ b/makefile.libretro
@@ -71,6 +71,7 @@ else
    CC = gcc
    SHARED := -shared -static-libgcc -static-libstdc++ -s -Wl,--version-script=src/libretro/link.T
    CFLAGS += -D__WIN32__ -D__WIN32_LIBRETRO__ -Wno-missing-field-initializers
+   ENDIANNESS_DEFINES := -DLSB_FIRST
    IS_X86 = 1
 endif
 
