--- a/makefile.libretro
+++ b/makefile.libretro
@@ -2,7 +2,7 @@ DEBUG=0
 WANT_LIBCO = 0
 #set later according to platform
 IS_X86 = 0
-TARGET = mame
+TARGET_NAME = imame4all
 # extension for executables
 EXE = .so
 
@@ -93,6 +93,21 @@ else ifeq ($(platform), wii)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    PLATFORM_DEFINES += -DGEKKO _DHW_RVL -mrvl -mcpu=750 -meabi -mhard-float
    HAVE_RZLIB := 1
+# CTR(3DS)
+else ifeq ($(platform), ctr)
+   TARGET := $(TARGET_NAME)_libretro_ctr.a
+   CC = $(DEVKITARM)/bin/arm-none-eabi-gcc$(EXE_EXT)
+   CXX = $(DEVKITARM)/bin/arm-none-eabi-g++$(EXE_EXT)
+   AR = $(DEVKITARM)/bin/arm-none-eabi-ar$(EXE_EXT)
+   CFLAGS += -DARM11 -D_3DS
+   CFLAGS += -march=armv6k -mtune=mpcore -mfloat-abi=hard
+   CFLAGS += -Wall -mword-relocations
+   CFLAGS += -fomit-frame-pointer -ffast-math
+   CXXFLAGS = $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++11
+   HAVE_RZLIB := 1
+   WANT_LIBCO := 1
+   ARM = 1
+   EXE =
 else
    EXE = .dll
    TARGET := retro
@@ -175,6 +190,8 @@ else ifeq ($(platform), xenon)
 else ifeq ($(platform), ngc)
 	$(AR) rcs $@ $(OBJECTS_COMBINED)
 else ifeq ($(platform), wii)
+	$(AR) rcs $@ $(OBJECTS_COMBINED)
+else ifeq ($(platform), ctr)
 	$(AR) rcs $@ $(OBJECTS_COMBINED)
 else
 	@echo Linking $@...
