--- a/makefile.libretro
+++ b/makefile.libretro
@@ -3,9 +3,7 @@ WANT_LIBCO = 0
 DISABLE_ERROR_LOGGING = 0
 #set later according to platform
 IS_X86 = 0
-TARGET_NAME = imame4all
-# extension for executables
-EXE = .so
+TARGET_NAME = mame2000
 
 GCC_DEFINES := -Wno-sign-compare -Wunused -Wpointer-arith -Waggregate-return -Wshadow -Werror=implicit-function-declaration
 
@@ -34,30 +32,26 @@ else ifneq ($(findstring MINGW,$(shell uname -a)),)
 endif
 
 ifeq ($(platform), unix)
-   EXE = .so
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.so
    fpic := -fPIC
    SHARED := -shared -Wl,--version-script=src/libretro/link.T -Wl,-no-undefined
    ENDIANNESS_DEFINES := 
    IS_X86 = 1
 else ifeq ($(platform), osx)
-   EXE = .dylib
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.dylib
    fpic := -fPIC
    SHARED := -dynamiclib
    ENDIANNESS_DEFINES := 
    IS_X86 = 1
 else ifeq ($(platform), ps3)
-   EXE = .a
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.a
    CC = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-gcc.exe
    AR = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-ar.exe
    ENDIANNESS_DEFINES :=
    PLATFORM_DEFINES := -D__CELLOS_LV2__ -D__ppc__
    HAVE_RZLIB := 1
 else ifeq ($(platform), sncps3)
-   EXE = .a
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.a
    CC = $(CELL_SDK)/host-win32/sn/bin/ps3ppusnc.exe
    AR = $(CELL_SDK)/host-win32/sn/bin/ps3snarl.exe
    CFLAGS += -DWORDS_BIGENDIAN=1
@@ -65,8 +59,7 @@ else ifeq ($(platform), sncps3)
    PLATFORM_DEFINES := -D__CELLOS_LV2__ -D__ppc__
    HAVE_RZLIB := 1
 else ifeq ($(platform), psl1ght)
-   EXE = .a
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.a
    CC = $(PS3DEV)/ppu/bin/ppu-gcc$(EXE_EXT)
    AR = $(PS3DEV)/ppu/bin/ppu-ar$(EXE_EXT)
    CFLAGS += -DWORDS_BIGENDIAN=1
@@ -74,22 +67,19 @@ else ifeq ($(platform), psl1ght)
    PLATFORM_DEFINES := -D__CELLOS_LV2__ -D__ppc__
    HAVE_RZLIB := 1
 else ifeq ($(platform), xenon)
-   EXE = .a
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.a
    CC = xenon-gcc$(EXE_EXT)
    AR = xenon-ar$(EXE_EXT)
    CFLAGS += -D__LIBXENON__ -m32 -D__ppc__
    PLATFORM_DEFINES := -D__LIBXENON__ -D__ppc_
 else ifeq ($(platform), ngc)
-   EXE = .a
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.a
    CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc$(EXE_EXT)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    PLATFORM_DEFINES += -DGEKKO -DHW_DOL -mrvl -mcpu=750 -meabi -mhard-float
    HAVE_RZLIB := 1
 else ifeq ($(platform), wii)
-   EXE = .a
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.a
    CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc$(EXE_EXT)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    PLATFORM_DEFINES += -DGEKKO _DHW_RVL -mrvl -mcpu=750 -meabi -mhard-float
@@ -109,10 +99,8 @@ else ifeq ($(platform), ctr)
    WANT_LIBCO := 1
    DISABLE_ERROR_LOGGING := 1
    ARM = 1
-   EXE =
 else
-   EXE = .dll
-   TARGET := imame4all_libretro
+   TARGET := $(TARGET_NAME)_libretro.dll
    CC = gcc
    SHARED := -shared -static-libgcc -static-libstdc++ -s -Wl,--version-script=src/libretro/link.T
    CFLAGS += -D__WIN32__ -D__WIN32_LIBRETRO__ -Wno-missing-field-initializers
@@ -144,7 +132,7 @@ VPATH=src $(wildcard src/cpu/*)
 MD = @mkdir
 RM = @rm -f
 
-EMULATOR = $(TARGET)$(EXE)
+EMULATOR = $(TARGET)
 
 DEFS = -DGP2X -DALIGN_INTS -DALIGN_SHORTS -DINLINE="static __inline" $(X86_DEFINES) -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -D__LIBRETRO__ $(ENDIANNESS_DEFINES)
 
