don't enable asm cpu cores Cyclone and DrZ80 by default. They cause incompatibilities with games and drz80 uses armv6 instructions that are deprecated/emulated on armv7 and higher (gcc will reject them building for armv8). The ASM cores can be enabled with USE_CYCLONE=1 and/or USE_DRZ80=1

--- a/Makefile.common
+++ b/Makefile.common
@@ -1771,12 +1771,19 @@ CPUDEFS += -DHAS_ARM=1
 SOURCES_C += $(CORE_DIR)/src/cpu/arm/arm.c
 endif
 
-ifneq ($(ARM),)
+ifeq ($(ARM), 1)
 	DEFS += -DIS_ARM=1
-	CPUDEFS += -DHAS_CYCLONE=1 -DHAS_DRZ80=1
+endif
+
+ifeq ($(USE_CYCLONE), 1)
+	DEFS += -DHAS_CYCLONE=1
 	SOURCES_ASM += $(CORE_DIR)/src/cpu/m68000_cyclone/cyclone.s \
-				  $(CORE_DIR)/src/cpu/m68000_cyclone/c68000.s \
-				  $(CORE_DIR)/src/cpu/z80_drz80/drz80.s \
+				  $(CORE_DIR)/src/cpu/m68000_cyclone/c68000.s
+endif
+
+ifeq ($(USE_DRZ80), 1)
+	DEFS += -DHAS_DRZ80=1
+	SOURCES_ASM += $(CORE_DIR)/src/cpu/z80_drz80/drz80.s \
 				  $(CORE_DIR)/src/cpu/z80_drz80/drz80_z80.s
 endif
 
