backport missing romset categories letters a-f

--- a/metadata/catver.ini
+++ b/metadata/catver.ini
@@ -37,7 +37,7 @@ abaseb2=Sports / Baseball
 actfanc1=Platform / Shooter Scrolling
 actfancj=Platform / Shooter Scrolling
 actfancr=Platform / Shooter Scrolling
-aeroboto=**Uncategorized**
+aeroboto=Shooter / Misc. Horizonal
 aerofgt=Shooter / Flying Vertical
 aerofgtb=Shooter / Flying Vertical
 aerofgtc=Shooter / Flying Vertical
@@ -87,10 +87,10 @@ arcadecl=Multiplay
 archriv2=Sports / Basketball
 archrivl=Sports / Basketball
 area88=Shooter / Flying Horizontal
-ark2jp=**Uncategorized**
-ark2us=**Uncategorized**
+ark2jp=Breakout
+ark2us=Breakout
 arkangc=Breakout
-arkanoi2=**Uncategorized**
+arkanoi2=Breakou
 arkanoid=Breakout
 arkarea=Shooter / Field
 arkatayt=Breakout
@@ -206,7 +206,7 @@ blasto=Maze / Shooter Small
 blastoff=Shooter / Flying Vertical
 blazer=Shooter / Driving Diagonal
 blazstar=Shooter / Flying Horizontal
-blckgalb=**Uncategorized**
+blckgalb=Breakout *Mature*
 blckout2=Puzzle / Drop
 bldwolf=Shooter / Walking
 blkdrgnb=Platform / Fighter Scrolling
@@ -217,7 +217,7 @@ block=Breakout
 blockade=Maze / Surround
 blockbl=Breakout
 blocken=Breakout
-blockgal=**Uncategorized**
+blockgal=Breakout *Mature*
 blockhl=Puzzle
 blockj=Breakout
 blockout=Puzzle / Drop
@@ -271,7 +271,7 @@ bubblesr=Misc.
 bubbobr1=Platform / Run Jump
 bublbobl=Platform / Run Jump
 bublbobr=Platform / Run Jump
-bullfgtj=**Uncategorized**
+bullfgtj=Sports / Bull Fighting
 burnforc=Shooter / Driving Chase View
 burningf=Fighter / Horizontal 2.5D
 burningh=Fighter / Horizontal 2.5D
@@ -284,7 +284,7 @@ cabalbl=Shooter / 3rd Person
 cachat=Puzzle / Drop
 calibr50=Shooter / Walking
 calipso=Maze / Shooter Small
-cameltru=**Uncategorized**
+cameltru=Maze
 cameltry=Maze
 canbprot=Shooter / Gallery
 canyon=Shooter / Gallery
@@ -319,7 +319,7 @@ centiped=Shooter / Gallery
 cerberus=Shooter / Field
 challeng=Shooter / Gallery
 champbas=Sports / Baseball
-champbb2=**Uncategorized**
+champbb2=Sports / Baseball
 champbbj=Sports / Baseball
 champwr=Wrestling
 champwrj=Wrestling
@@ -428,7 +428,7 @@ cyberbal=Sports / Football Amer.
 cyberbt=Sports / Football Amer.
 cyberlip=Platform / Shooter Scrolling
 dairesya=Platform / Shooter Scrolling
-dakkochn=**Uncategorized**
+dakkochn=Tabletop / Mahjong *Mature*
 dangar=Shooter / Flying Vertical
 dangar2=Shooter / Flying Vertical
 dangarb=Shooter / Flying Vertical
@@ -467,8 +467,8 @@ demon=Shooter / Field
 demonwld=Platform / Shooter Scrolling
 depthch=Shooter / Gallery
 desertgu=Shooter / Gun
-destderb=**Uncategorized**
-destderm=**Uncategorized**
+destderb=Driving
+destderm=Driving
 desterth=Maze / Shooter Small
 detatwin=Shooter / Flying Vertical
 devilfsg=Maze
@@ -493,14 +493,14 @@ dinorexj=Fighter / Versus
 dinorexu=Fighter / Versus
 disco=Maze
 dkgensan=Platform / Fighter Scrolling
-dkjrbl=**Uncategorized**
-dkjrjp=**Uncategorized**
-dkngjrjp=**Uncategorized**
+dkjrbl=Platform / Run Jump
+dkjrjp=Platform / Run Jump
+dkngjrjp=Platform / Run Jump
 dkong=Platform / Run Jump
 dkong3=Platform / Run Jump
 dkong3j=Platform / Run Jump
 dkongjp=Platform / Run Jump
-dkongjpo=**Uncategorized**
+dkongjpo=Platform / Run Jump
 dkongjr=Platform / Run Jump
 docastl2=Platform / Run Jump
 docastle=Platform / Run Jump
@@ -623,7 +623,7 @@ fitegolf=Sports / Golf
 fitter=Maze
 flashgal=Fighter / Horizontal 2D
 flicky=Platform / Run Jump
-flicky2=**Uncategorized**
+flicky2=Platform / Run Jump
 flipshot=Sports / Tennis
 flkatck=Shooter / Flying Vertical
 flyboy=Sports / Hang Gliding
@@ -632,7 +632,7 @@ fnkyfish=Shooter / Misc. Horizontal
 foodf=Fighter / Field
 footchmp=Sports / Soccer
 forgottn=Shooter / Flying Horizontal
-formatz=**Uncategorized**
+formatz=Shooter / Misc. Horizontal
 fpoint=Puzzle / Drop
 fpointbl=Puzzle / Drop
 freeze=Maze / Shooter Large
