add missing categories for letters G-S

--- a/metadata/catver.ini
+++ b/metadata/catver.ini
@@ -666,7 +666,7 @@ galagamw=Shooter / Gallery
 galap1=Shooter / Gallery
 galap4=Shooter / Gallery
 galapx=Shooter / Gallery
-galaxb=**Uncategorized**
+galaxb=Shooter / Gallery
 galaxian=Shooter / Gallery
 galaxyfg=Fighter / Versus
 galivan=Platform / Fighter Scrolling
@@ -681,8 +681,8 @@ gangwarb=Fighter / Horizontal 2.5D
 gangwars=Fighter / Horizontal 2.5D
 gaplus=Shooter / Gallery
 gaplusa=Shooter / Gallery
-gardia=**Uncategorized**
-gardiab=**Uncategorized**
+gardia=Shooter / Flying Vertical
+gardiabShooter / Flying Vertical
 garuka=Shooter / 3rd Person
 garyoret=Shooter / Walking
 gatedom1=Maze / Fighter
@@ -707,7 +707,7 @@ gghost=Sports / Tennis
 ghostb=Shooter / Walking
 ghostb3=Shooter / Walking
 ghouls=Platform / Fighter Scrolling
-ghoulsj=**Uncategorized**
+ghoulsj=Platform / Fighter Scrolling
 ghoulsu=Platform / Fighter Scrolling
 ghox=Breakout
 gimeabrk=Sports / Pool
@@ -939,7 +939,7 @@ kickridr=Driving / Race Bike
 kidniki=Platform / Fighter Scrolling
 kikcubic=Maze / Puzzle
 kikikai=Shooter / Walking
-kikstart=**Uncategorized**
+kikstart=Driving / Race Bike
 killcom=Shooter / Field
 kingbalj=Shooter / Gallery
 kingball=Shooter / Gallery
@@ -990,8 +990,8 @@ lasso=Misc.
 lastblad=Fighter / Versus
 lastbld2=Fighter / Versus
 lastduel=Shooter / Misc. Vertical
-lastmiss=**Uncategorized**
-lastmss2=**Uncategorized**
+lastmissShooter / Field
+lastmss2=Shooter / Field
 lazercmd=Maze / Shooter Small
 lbowling=Sports / Bowling
 ldrun=Platform / Run Jump
@@ -1070,7 +1070,7 @@ mappy=Platform / Run Jump
 mappyjp=Platform / Run Jump
 marble=Maze
 marble2=Maze
-marblea=**Uncategorized**
+marblea=Maze
 marineb=Misc.
 mariner=Shooter / Misc. Horizontal
 mario=Platform / Run Jump
@@ -1156,7 +1156,7 @@ moguchan=Maze
 mole=Misc.
 monkeyd=Platform / Run Jump
 monsterb=Platform / Shooter
-monwar2a=**Uncategorized**
+monwar2a=Shooter / Flying
 monymony=Maze
 moonal2=Shooter / Gallery
 moonal2b=Shooter / Gallery
@@ -1168,7 +1168,7 @@ mooncrsg=Shooter / Gallery
 mooncrst=Shooter / Gallery
 moonqsr=Shooter / Gallery
 moonwalk=Maze / Fighter
-moonwar2=**Uncategorized**
+moonwar2=Shooter / Flying
 moonwlka=Maze / Fighter
 moonwlkb=Maze / Fighter
 mosyougi=Tabletop
@@ -1177,7 +1177,7 @@ motos=Puzzle
 mpatrol=Shooter / Driving Horizontal
 mpatrolw=Shooter / Driving Horizontal
 mplanets=Shooter / Field
-mranger=**Uncategorized**
+mranger=Shooter / Driving Horizontal
 mrdo=Maze / Digging
 mrdofix=Maze / Digging
 mrdot=Maze / Digging
@@ -1189,10 +1189,10 @@ mrjong=Maze / Puzzle
 mrlo=Maze / Digging
 mrtnt=Maze
 mrviking=Shooter / Walking
-mrvikinj=**Uncategorized**
+mrvikinj=Shooter / Walking
 mslug=Platform / Shooter Scrolling
 mslug2=Platform / Shooter Scrolling
-mspacatk=**Uncategorized**
+mspacatk=Maze
 mspacman=Maze
 msword=Platform / Fighter Scrolling
 mswordj=Platform / Fighter Scrolling
@@ -1204,7 +1204,7 @@ mtwins=Platform / Fighter Scrolling
 mutnat=Fighter / Horizontal 2.5D
 mx5000=Shooter / Flying Vertical
 myhero=Fighter / Horizontal 2D
-myheroj=**Uncategorized**
+myheroj=Fighter / Horizontal 2D
 myherok=Fighter / Horizontal 2D
 mysticm=Sports / Track & Field
 mysticri=Shooter / Flying Horizontal
@@ -1253,7 +1253,7 @@ nomnlnd=Shooter / Field
 nomnlndg=Shooter / Field
 nov2001u=Shooter / Field
 nova2001=Shooter / Field
-npacmod=**Uncategorized**
+npacmod=Maze
 nprinces=Shooter / Walking
 nprincsb=Shooter / Walking
 nprincsu=Shooter / Walking
@@ -1423,7 +1423,7 @@ punishrj=Fighter / Horizontal 2.5D
 punishru=Fighter / Horizontal 2.5D
 punkshot=Sports / Basketball
 punksht2=Sports / Basketball
-puzbobb=**Uncategorized**
+puzbobb=Puzzle / Toss
 puzlclub=Puzzle / Sliding
 puzzldpr=Puzzle / Toss
 puzzledp=Puzzle / Toss
@@ -1634,16 +1634,16 @@ sf1=Fighter / Versus
 sf1jp=Fighter / Versus
 sf1us=Fighter / Versus
 sf2=Fighter / Versus
-sf2a=**Uncategorized**
+sf2a=Fighter / Versus
 sf2accp2=Fighter / Versus
-sf2b=**Uncategorized**
+sf2b=Fighter / Versus
 sf2ce=Fighter / Versus
-sf2cea=**Uncategorized**
-sf2ceb=**Uncategorized**
+sf2cea=Fighter / Versus
+sf2ceb=Fighter / Versus
 sf2cej=Fighter / Versus
-sf2e=**Uncategorized**
+sf2e=Fighter / Versus
 sf2j=Fighter / Versus
-sf2jb=**Uncategorized**
+sf2jb=Fighter / Versus
 sf2rb=Fighter / Versus
 sf2red=Fighter / Versus
 sf2t=Fighter / Versus
@@ -1680,7 +1680,7 @@ shootoub=Shooter / 3rd Person
 shootouj=Shooter / 3rd Person
 shootout=Shooter / 3rd Person
 showdown=Tabletop
-shtngmst=**Uncategorized**
+shtngmst=Shooter / Gun
 shuffle=Sports / Shuffleboard
 shuuz=Sports / Horseshoes
 shuuz2=Sports / Horseshoes
@@ -1874,7 +1874,7 @@ storming=Shooter / Misc. Vertical
 stratgys=Shooter / Driving Vertical
 stratgyx=Shooter / Driving Vertical
 stratvox=Shooter / Gallery
-stratvxb=**Uncategorized**
+stratvxb=Shooter / Gallery
 streakng=Maze
 streets1=Fighter / Versus Co-op
 streetsj=Fighter / Versus Co-op
@@ -1900,7 +1900,7 @@ superqix=Puzzle
 superspy=Fighter / Misc.
 suprloco=Misc.
 suprmatk=Shooter / Command
-suprmou2=**Uncategorized**
+suprmou2=Platform / Run Jump
 suprmous=Platform / Run Jump
 surpratk=Platform / Shooter Scrolling
 sutapper=Misc.
