--- a/metadata/catver.ini
+++ b/metadata/catver.ini
@@ -1,7 +1,6 @@
 ;### MAME 2000 (MAME 0.37b5) catver.ini
 ;### this file was initially backported from a catver.ini with this description:
 ;### 03 November 2001 / MAME .56 / trigger@mameworld.net
-;### Note: MAME 0.37b5 entries without corresponding 0.56 entries have been tagged **Uncategorized** pending additional work
 
 [Category]
 005=Maze / Shooter Small
@@ -1282,7 +1281,7 @@ outrun=Driving / Race Chase
 outruna=Driving / Race Chase
 outrunb=Driving / Race Chase
 outzone=Shooter / Walking
-outzonep=**Uncategorized**
+outzonep=Shooter / Walking
 overtop=Driving / Race
 ozmawars=Shooter / Gallery
 p47=Shooter / Flying Horizontal
@@ -1297,8 +1296,8 @@ pacman=Maze
 pacmanbl=Maze
 pacmania=Maze
 pacmanij=Maze
-pacmanjp=**Uncategorized**
-pacmanm=**Uncategorized**
+pacmanjp=Maze
+pacmanm=Maze
 pacmod=Maze
 pacnchmp=Maze
 pacnpal=Maze
@@ -1391,7 +1390,7 @@ pooyan=Shooter / Gallery
 pooyans=Shooter / Gallery
 popbounc=Breakout
 popeye=Platform / Run Jump
-popeye2=**Uncategorized**
+popeye2=Platform / Run Jump
 popeyebl=Platform / Run Jump
 popflama=Maze / Shooter Small
 popflame=Maze / Shooter Small
@@ -1997,8 +1996,8 @@ todruaga=Maze
 todruagb=Maze
 toggle=Maze / Puzzle
 toki=Platform / Shooter Scrolling
-toki2=**Uncategorized**
-toki3=**Uncategorized**
+toki2=Platform / Shooter Scrolling
+toki3=Platform / Shooter Scrolling
 tokib=Platform / Shooter Scrolling
 tokio=Shooter / Flying Vertical
 tokiob=Shooter / Flying Vertical
@@ -2082,7 +2081,7 @@ twotiger=Shooter / Field
 tws96=Sports / Soccer
 uccops=Fighter / Horizontal 2.5D
 uccopsj=Fighter / Horizontal 2.5D
-ufosensi=**Uncategorized**
+ufosensi=Fighter / Horizontal 2.5D
 ultraman=Fighter / Versus
 umk3=Fighter / Versus
 umk3r11=Fighter / Versus
@@ -2105,7 +2104,7 @@ varthj=Shooter / Flying Vertical
 varthu=Shooter / Flying Vertical
 vastar=Shooter / Flying Horizontal
 vastar2=Shooter / Flying Horizontal
-vendett2=**Uncategorized**
+vendett2=Fighter / Horizontal 2.5D
 vendetta=Fighter / Horizontal 2.5D
 vendettj=Fighter / Horizontal 2.5D
 venture=Maze / Shooter Small
@@ -2150,14 +2149,14 @@ wb3a=Platform / Shooter Scrolling
 wb3bl=Platform / Shooter Scrolling
 wbdeluxe=Platform / Shooter Scrolling
 wbml=Platform / Shooter Scrolling
-wbmlj=**Uncategorized**
-wbmlj2=**Uncategorized**
-wbmlju=**Uncategorized**
+wbmlj=Platform / Shooter Scrolling
+wbmlj2=Platform / Shooter Scrolling
+wbmlju=Platform / Shooter Scrolling
 wboy=Platform / Shooter Scrolling
 wboy2=Platform / Shooter Scrolling
 wboy3=Platform / Shooter Scrolling
-wboy4=**Uncategorized**
-wboy4u=**Uncategorized**
+wboy4=Platform / Shooter Scrolling
+wboy4u=Platform / Shooter Scrolling
 wboyu=Platform / Shooter Scrolling
 wc90=Sports / Soccer
 wc90b=Sports / Soccer
