Update MAME 0.37b5 catver.ini to newer format
This PR has a twin in the MAME 2003 repository: https://github.com/libretro/mame2003-libretro/pull/93

All of the other MAME cores already have the new tag format since they came along after the change. 

This PR adopst the catver.ini format for the "Mature" tag that was adopted by MAMEdev somewhere between 2003 and 2010.

This will bring compatibility with newer category filters software Lightspeed MameLister without affecting the use of filters with support for both styles.

--- a/metadata/catver.ini
+++ b/metadata/catver.ini
@@ -1,6 +1,7 @@
 ;### MAME 2000 (MAME 0.37b5) catver.ini
-;### this file was initially backported from a catver.ini with this description:
+;### This file was initially backported with from a catver.ini with this description:
 ;### 03 November 2001 / MAME .56 / trigger@mameworld.net
+;### Now maintained as part of the libretro MAME 2000 emulator core
 
 [Category]
 005=Maze / Shooter Small
@@ -154,7 +155,7 @@ bagman=Platform / Run Jump
 bagmans=Platform / Run Jump
 bagmans2=Platform / Run Jump
 bagnard=Platform / Run Jump
-bakatono=Mahjong *Mature*
+bakatono=Mahjong * Mature *
 ballbomb=Shooter / Gallery
 baluba=Platform / Run Jump
 bandido=Shooter / Field
@@ -205,7 +206,7 @@ blasto=Maze / Shooter Small
 blastoff=Shooter / Flying Vertical
 blazer=Shooter / Driving Diagonal
 blazstar=Shooter / Flying Horizontal
-blckgalb=Breakout *Mature*
+blckgalb=Breakout * Mature *
 blckout2=Puzzle / Drop
 bldwolf=Shooter / Walking
 blkdrgnb=Platform / Fighter Scrolling
@@ -216,7 +217,7 @@ block=Breakout
 blockade=Maze / Surround
 blockbl=Breakout
 blocken=Breakout
-blockgal=Breakout *Mature*
+blockgal=Breakout * Mature *
 blockhl=Puzzle
 blockj=Breakout
 blockout=Puzzle / Drop
@@ -427,7 +428,7 @@ cyberbal=Sports / Football Amer.
 cyberbt=Sports / Football Amer.
 cyberlip=Platform / Shooter Scrolling
 dairesya=Platform / Shooter Scrolling
-dakkochn=Tabletop / Mahjong *Mature*
+dakkochn=Tabletop / Mahjong * Mature *
 dangar=Shooter / Flying Vertical
 dangar2=Shooter / Flying Vertical
 dangarb=Shooter / Flying Vertical
@@ -673,7 +674,7 @@ galivan2=Platform / Fighter Scrolling
 gallag=Shooter / Gallery
 gallop=Shooter / Flying Horizontal
 galmidw=Shooter / Gallery
-galpanic=Puzzle *Mature*
+galpanic=Puzzle * Mature *
 galturbo=Shooter / Gallery
 galxwars=Shooter / Gallery
 gangwarb=Fighter / Horizontal 2.5D
@@ -754,8 +755,8 @@ gteikoku=Shooter / Gallery
 gtmr=Driving / Race
 gtmre=Driving / Race
 gunbird=Shooter / Flying Vertical
-gundeala=Puzzle / Drop *Mature*
-gundealr=Puzzle / Drop *Mature*
+gundeala=Puzzle / Drop * Mature *
+gundealr=Puzzle / Drop * Mature *
 gunfight=Shooter / Versus
 gunforce=Platform / Shooter Scrolling
 gunforcu=Platform / Shooter Scrolling
@@ -803,7 +804,7 @@ helifira=Shooter / Gallery
 helifire=Shooter / Gallery
 hellfire=Shooter / Flying Horizontal
 herbiedk=Sports / Track & Field
-hexa=Puzzle / Drop *Mature*
+hexa=Puzzle / Drop * Mature *
 hharry=Platform / Fighter Scrolling
 hharryu=Platform / Fighter Scrolling
 higemaru=Maze
@@ -882,7 +883,7 @@ jackrab2=Platform / Run Jump
 jackrabs=Platform / Run Jump
 jackrabt=Platform / Run Jump
 jailbrek=Platform / Shooter Scrolling
-janshin=Mahjong *Mature*
+janshin=Mahjong * Mature *
 jedi=Shooter / Driving Diagonal
 jjack=Platform / Run Jump
 joemac=Platform / Shooter Scrolling
@@ -1046,11 +1047,11 @@ madgearj=Driving / Race
 madmotor=Fighter / Horizontal 2.5D
 magdrop2=Puzzle / Toss
 magdrop3=Puzzle / Toss
-magix=Puzzle / Drop *Mature*
+magix=Puzzle / Drop * Mature *
 maglord=Platform / Shooter Scrolling
 maglordh=Platform / Shooter Scrolling
 magspot2=Shooter / Gallery
-mahretsu=Mahjong *Mature*
+mahretsu=Mahjong * Mature *
 mainevt=Wrestling
 mainevt2=Wrestling
 majest12=Shooter / Gallery
@@ -1075,7 +1076,7 @@ mariner=Shooter / Misc. Horizontal
 mario=Platform / Run Jump
 mariojp=Platform / Run Jump
 mars=Shooter / Flying Horizontal
-marukin=Mahjong *Mature*
+marukin=Mahjong * Mature *
 marukodq=Quiz / Japanese
 marvins=Maze
 marvland=Platform / Fighter Scrolling
@@ -1107,8 +1108,8 @@ metafox=Shooter / Flying Vertical
 meteor=Shooter / Field
 metrocrs=Platform / Run Jump Scrolling
 mexico86=Sports / Soccer
-mgakuen=Mahjong *Mature*
-mgakuen2=Mahjong *Mature*
+mgakuen=Mahjong * Mature *
+mgakuen2=Mahjong * Mature *
 mhavoc=Shooter / Misc.
 mhavoc2=Shooter / Misc.
 mhavocp=Shooter / Misc.
@@ -1135,7 +1136,7 @@ missile2=Shooter / Command
 mizubaku=Platform / Fighter Scrolling
 mjleague=Sports / Baseball
 mjnquesb=Mahjong
-mjnquest=Mahjong *Mature*
+mjnquest=Mahjong * Mature *
 mk=Fighter / Versus
 mk2=Fighter / Versus
 mk2r14=Fighter / Versus
@@ -1323,10 +1324,10 @@ pbactio2=Pinball
 pbaction=Pinball
 pballoon=Misc.
 pbobble=Puzzle / Toss
-pcktgal=Sports / Pool *Mature*
-pcktgal2=Sports / Pool *Mature*
-pcktgalb=Sports / Pool *Mature*
-peekaboo=Breakout *Mature*
+pcktgal=Sports / Pool * Mature *
+pcktgal2=Sports / Pool * Mature *
+pcktgalb=Sports / Pool * Mature *
+peekaboo=Breakout * Mature *
 pengo=Maze
 pengo2=Maze
 pengo2u=Maze
@@ -1354,7 +1355,7 @@ pinbo=Pinball
 pinbos=Pinball
 pingpong=Sports / Tennis
 pipedrm=Puzzle
-pipibibs=Platform / Run Jump *Mature*
+pipibibs=Platform / Run Jump * Mature *
 piranha=Maze
 pisces=Shooter / Gallery
 pistoldm=Shooter / Flying Horizontal
@@ -1362,7 +1363,7 @@ pitfall2=Platform / Run Jump Scrolling
 pitfallu=Platform / Run Jump Scrolling
 pitfigh3=Fighter / Versus
 pitfight=Fighter / Versus
-pkladies=Tabletop *Mature*
+pkladies=Tabletop * Mature *
 pkunwar=Sports
 pkunwarj=Sports
 pleiadbl=Shooter / Gallery
@@ -1426,7 +1427,7 @@ puzbobb=Puzzle / Toss
 puzlclub=Puzzle / Sliding
 puzzldpr=Puzzle / Toss
 puzzledp=Puzzle / Toss
-puzznic=Puzzle / Match *Mature*
+puzznic=Puzzle / Match * Mature *
 pyros=Platform / Fighter Scrolling
 qad=Quiz / English
 qadj=Quiz / Japanese
@@ -1670,7 +1671,7 @@ shinobi=Platform / Fighter Scrolling
 shinobia=Platform / Fighter Scrolling
 shinobib=Platform / Fighter Scrolling
 shinobl=Platform / Fighter Scrolling
-shisen=Puzzle / Match *Mature*
+shisen=Puzzle / Match * Mature *
 shocktr2=Shooter / Walking
 shocktro=Shooter / Walking
 shollow=Shooter / Gallery
@@ -1683,8 +1684,8 @@ shtngmst=Shooter / Gun
 shuffle=Sports / Shuffleboard
 shuuz=Sports / Horseshoes
 shuuz2=Sports / Horseshoes
-sichuan2=Puzzle / Match *Mature*
-sichuana=Puzzle / Match *Mature*
+sichuan2=Puzzle / Match * Mature *
+sichuana=Puzzle / Match * Mature *
 sicv=Shooter / Gallery
 sidearjp=Shooter / Flying Horizontal
 sidearmr=Shooter / Flying Horizontal
@@ -1806,7 +1807,7 @@ spinlbrj=Shooter / 3rd Person
 spinlbrk=Shooter / 3rd Person
 spinlbru=Shooter / 3rd Person
 spinmast=Platform / Fighter Scrolling
-splash=Misc. *Mature*
+splash=Misc. * Mature *
 splat=Shooter / Field
 splatter=Fighter / Horizontal 2D
 spnchotj=Sports / Boxing
@@ -2168,7 +2169,7 @@ wh1=Fighter / Versus
 wh2=Fighter / Versus
 wh2j=Fighter / Versus
 whodunit=Shooter / Gun
-whoopee=Platform / Run Jump *Mature*
+whoopee=Platform / Run Jump * Mature *
 whp=Fighter / Versus
 wildfang=Platform / Fighter Scrolling
 willow=Platform / Shooter Scrolling
@@ -2232,7 +2233,7 @@ zedblade=Shooter / Flying Horizontal
 zektor=Shooter / Field
 zerotime=Shooter / Gallery
 zerowing=Shooter / Flying Horizontal
-zerozone=Puzzle / Drop *Mature*
+zerozone=Puzzle / Drop * Mature *
 zigzag=Maze / Digging
 zigzag2=Maze / Digging
 zingzip=Shooter / Flying Horizontal
