fix mkdir() usage use path_mkdir() instead

--- a/Makefile.common
+++ b/Makefile.common
@@ -1815,3 +1815,8 @@ ifeq ($(WANT_LIBCO), 1)
 else
 	SOURCES_C += $(LIBRETRO_COMM_DIR)/rthreads/rthreads.c
 endif
+
+SOURCES_C += $(LIBRETRO_COMM_DIR)/compat/compat_strl.c \
+	$(LIBRETRO_COMM_DIR)/compat/compat_strcasestr.c \
+	$(LIBRETRO_COMM_DIR)/file/file_path.c 
+
