--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ include:
   ################################## CONSOLES ################################
   # Nintendo 3DS
   - project: 'libretro-infrastructure/ci-templates'
-    file: '/ctr-static.yml'
+    file: '/ctr-legacy-static.yml'
     
   # Nintendo GameCube
   - project: 'libretro-infrastructure/ci-templates'
@@ -181,7 +181,7 @@ libretro-build-tvos-arm64:
 # Nintendo 3DS
 libretro-build-ctr:
   extends:
-    - .libretro-ctr-static-retroarch-master
+    - .libretro-ctr-legacy-static-retroarch-master
     - .core-defs
     
 # Nintendo GameCube
