Fix large file support

--- a/Makefile.common
+++ b/Makefile.common
@@ -5,7 +5,7 @@ SOUNDS      :=
 
 LIBRETRO_COMM_DIR := $(CORE_DIR)/src/libretro/libretro-common
 
-DEFS        := -DGP2X -DALIGN_INTS -DALIGN_SHORTS $(X86_DEFINES) -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -D__LIBRETRO__
+DEFS        := -DGP2X -DALIGN_INTS -DALIGN_SHORTS $(X86_DEFINES) -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -D__LIBRETRO__ -D_FILE_OFFSET_BITS=64
 INCFLAGS    := -I$(CORE_DIR)/src -I$(CORE_DIR)/src/libretro -I$(LIBRETRO_COMM_DIR)/include
 
 # uncomment the following lines to include a CPU core
